--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
 bind-key r source-file ~/.tmux.conf \; \
- display-message "source-file done"
+	display-message "source-file done"
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -25,7 +25,14 @@ bind -n M-Down select-pane -D
 bind -n M-n select-window -n
 bind -n M-p select-window -p
 
+bind -n M-h clear-history
+bind -n M-k kill-pane
+
 # Enable mouse control (clickable windows, panes, resizable panes)
+set -g base-index 1
+setw -g pane-base-index 1
+setw -g aggressive-resize on
+
 set -g mouse on
 set -g default-terminal "screen-256color"
 
@@ -42,10 +49,13 @@ bind -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel \
 bind -n MouseDown2Pane run \
   'tmux set-buffer "$(pbpaste)";tmux paste-buffer'
 
+set -g @continuum-restore 'on'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
