--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@ unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
+set -g status-bg black
+set -g status-fg white
+
 # split panes using | and -
 bind | split-window -h
 bind _ split-window -v
@@ -26,6 +29,7 @@ bind -n M-n select-window -n
 bind -n M-p select-window -p
 
 bind -n M-h clear-history
+bind -n M-H run "reset; tmux clear-history"
 bind -n M-k kill-pane
 
 # Enable mouse control (clickable windows, panes, resizable panes)
