--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,8 @@ unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
-set -g status-bg black
-set -g status-fg white
+# set -g status-bg black
+# set -g status-fg white
 
 # split panes using | and -
 bind | split-window -h
